# sqlalchemy-sqliteupload

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
src/sqliteupload/: dialect.py
tests/: __init__.py  test_all.py
