[tool.poetry]
name = "sqlalchemy-sqliteupload"
version = "0.1.0"
description = ""
authors = ["Rehan Khwaja <rehan@khwaja.name>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
fs = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
